# markdown-question-bank

./: .gitignore  LICENSE  README.md  bank_summary.py  environment.yml  generate_pdf.sh  generate_programming_exam.py  generate_quiz.py  pyproject.toml  update_version.sh
src/markdown_question_bank/: __init__.py  bank.py  bank_filtered.py  cli_utils.py  parser_bank.py  parser_markown.py  parser_programming_bank.py  programming_bank.py  programming_markdown_exporter.py  programming_models.py  question.py  quiz_builder.py  quiz_markdown.py  quiz_markdown_exporter.py  quiz_model.py  sampler_answers.py  sampler_question.py  validator.py  version_utils.py
test_data/all/: EN.md  ES.md  GL.md
test_data/bank/lists/: EN.md  ES.md  GL.md
test_data/bank/strings/: EN.md  ES.md  GL.md
test_data/bank/topic1/: ES.md  GL.md
test_data/bank/topic2/: EN.md  ES.md
test_data/mini/: ES.md  GL.md
test_data/programming/: models.json
test_data/programming/lists_1/: EN.md  ES.md  GL.md
test_data/programming/lists_2/: EN.md  ES.md  GL.md
test_data/programming/strings_1/: EN.md  ES.md  GL.md
test_data/programming/strings_2/: EN.md  ES.md  GL.md
test_files/: head.jinja2  head.md  style.css
tests/: test_bank.py  test_parser_bank.py  test_parser_bank_programming.py  test_parser_markdown.py  test_programming_models.py  test_validator.py
