[project]
name = "question-bank"
version = "0.2.0"
description = "A tool for generating quiz and programming exam models from markdown question banks."
authors = [
  { name="Hugo L칩pez Fern치ndez", email="hlfernandez@uvigo.gal" },
  { name="Daniel Gonz치lez Pe침a", email="dgpena@uvigo.gal" }
]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Source = "https://github.com/hlfernandez/markdown-question-bank/"
